squelette-pld-comp/pld-comp/tests/ifcc-test-output/testfiles-9_incorrect_assignement/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: invalid suffix "aa" on integer constant
    3 |     int 189aa = 2;
      |         ^~~~~
input.c:3:9: error: expected identifier or ‘(’ before numeric constant

exit status: 1
